Updated from the dmm system K2host.Data and removed the Ocsp stuff

--- a/K2host.Certificates.csproj
+++ b/K2host.Certificates.csproj
@@ -14,6 +14,7 @@
     <RepositoryType>GIT</RepositoryType>
     <PackageTags>K2host, Certificates, CA, Certificate Authority, SSL, OCSP</PackageTags>
     <Description>A X509 Certificate Library to help create CA service and certificates.</Description>
+    <Version>1.0.4</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
