--- a/K2host.Certificates.csproj
+++ b/K2host.Certificates.csproj
@@ -14,11 +14,12 @@
     <RepositoryType>GIT</RepositoryType>
     <PackageTags>K2host, Certificates, CA, Certificate Authority, SSL, OCSP</PackageTags>
     <Description>A X509 Certificate Library to help create CA service and certificates.</Description>
-    <Version>1.0.5</Version>
+    <Version>2.0.6</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <Optimize>true</Optimize>
+    <OutputPath>D:\Development\K2host Works\K2host.Packages\K2host.Certificates\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
